[package]
name = "gdrr_2bp"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
indexmap = "1.9.0"
by_address = "1.0.4"
downcast-rs = "1.2.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.4.0"
once_cell = "1.12.0"
ctrlc = "3.2.2"
colored = "2.0.0"
svg = "0.10.0"
horrorshow = "0.8.4"
itertools = "0.10.3"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"