[package]
name = "gdrr_2bp"
version = "1.0.0"
edition = "2021"
default-run = "gdrr_main"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.8.5", features = [ "small_rng" ] }
indexmap = "1.9.0"
by_address = "1.0.4"
downcast-rs = "1.2.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.4.0"
once_cell = "1.12.0"
ctrlc = "3.2.2"
colored = "2.0.0"
svg = "0.13.1"
horrorshow = "0.8.4"
itertools = "0.10.3"
generational-arena = "0.2.8"
fxhash = "0.2.1"
ordered-float = "3.0.0"

[[bin]]
name = "gdrr_main"
path = "src/gdrr_main.rs"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
