[package]
name = "gdrr_2bp"
version = "1.3.0"
edition = "2024"
default-run = "gdrr_main"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.9.0", features = [ "small_rng" ] }
indexmap = "2.7.1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
once_cell = "1.12.0"
ctrlc = "3.2.2"
colored = "3.0.0"
svg = "0.18.0"
horrorshow = "0.8.4"
itertools = "0.14.0"
generational-arena = "0.2"
fxhash = "0.2.1"
ordered-float = "5.0.0"
mimalloc = "0.1"

[[bin]]
name = "gdrr_main"
path = "src/gdrr_main.rs"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
